<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_turtlesim</name>
  <version>1.0.2</version>
  <description>
    omni-directional version of turtlesim
  </description>
  <maintainer email="tiryoh@gmail.com">Daisuke Sato</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/Tiryoh/omni_turtlesim_ros2/wiki</url>
  <url type="bugtracker">https://github.com/Tiryoh/omni_turtlesim_ros2/issues</url>
  <url type="repository">https://github.com/Tiryoh/omni_turtlesim_ros2</url>
  <author>Josh Faust</author>

  <build_depend>qt5-qmake</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
